be-service.yaml
# Backend service
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3030
    targetPort: 3030
