fe-service.yaml
# Frontend service
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
