ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"


spec:
  ingressClassName: alb  # <-- Replace annotation with this
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: be-service
                port:
                  number: 3030
